

Name:                dph-examples
Version:             0.5.2.0
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.8
Stability:           experimental
Category:            Data Structures
Homepage:            http://www.haskell.org/haskellwiki/GHC/Data_Parallel_Haskell
Description:         Examples using Data Parallel Haskell
Synopsis:            Examples using Data Parallel Haskell

-- Flag gloss
-- Description:        Enable graphical front ends that use the gloss library.
-- Default:            False

-- With these examples, 
--   the plain dph-NAME versions are parallel versions built against dph-par
--   while the dph_NAME-seq versions are sequential ones built against dph-seq


-- Smoke ----------------------------------------------------------------------
-- examples/smoke/data
Executable dph-smoke-bool
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised
  hs-source-dirs: examples/smoke/data/Bool
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- examples/smoke/prims
Executable dph-smoke-concat
  build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  main-is:        Main.hs
  other-modules:  Vectorised
  hs-source-dirs: examples/smoke/prims/Concat
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


Executable dph-smoke-sumsq
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vector
                  Vectorised
                  Timing Randomish
  hs-source-dirs: examples/smoke/prims/SumSquares/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000
 
 
Executable dph-smoke-evens
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vector
                  Vectorised
                  Timing Randomish
  hs-source-dirs: examples/smoke/prims/Evens/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- examples/smoke/sharing
Executable dph-smoke-indices
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised
  hs-source-dirs: examples/smoke/sharing/Indices lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000
 
 
Executable dph-smoke-rank
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised Util Timing Randomish
  hs-source-dirs: examples/smoke/sharing/Rank lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


Executable dph-smoke-reverse
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised Randomish
  hs-source-dirs: examples/smoke/sharing/Reverse lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Imaginary ------------------------------------------------------------------
Executable dph-imaginary-primes
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised
  hs-source-dirs: examples/imaginary/Primes lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000

Executable dph-imaginary-words
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised
  hs-source-dirs: examples/imaginary/Words lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Spectral -------------------------------------------------------------------
Executable dph-spectral-dotp
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vector
                  Vectorised
                  Timing Randomish
  hs-source-dirs: examples/spectral/DotProduct/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


Executable dph-spectral-smvm
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised
                  Timing
  hs-source-dirs: examples/spectral/SMVM/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


Executable dph-spectral-quickhull
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised
                  Timing Points2D.Types SVG
  hs-source-dirs: examples/spectral/QuickHull/dph examples/spectral/QuickHull/lib lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


Executable dph-spectral-quickhull-vector
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  QuickHullIO
                  QuickHullSplit
                  QuickHullVector
                  Timing Points2D.Types SVG
  hs-source-dirs: examples/spectral/QuickHull/vector examples/spectral/QuickHull/lib lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


Executable dph-spectral-quicksort
  Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
  Main-is:        Main.hs
  other-modules:  Vectorised
                  Timing
  hs-source-dirs: examples/spectral/QuickSort/dph lib
  ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000


-- Real -----------------------------------------------------------------------
-- Executable dph-real-nbody-gloss
--     Main-is:        MainGloss.hs
--     other-modules:  Common.Dump Common.World Common.Body Common.Util 
--                     Solver Solver.ListBH.Solver
--                            Solver.NestedBH.Solver
--                            Solver.VectorBH.Solver
--                            Solver.VectorNaive.Solver
--                     Timing Points2D.Types Points2D.Generate
--                     Gloss.MainArgs Gloss.Draw Gloss.Config
--     Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*, parseargs == 0.1.*, gloss == 1.3.*
--     hs-source-dirs: lib real/NBody real/NBody/Gloss
--     ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000 -fno-liberate-case



-- Executable dph-real-nbody
--     Main-is:        MainBatch.hs
--     other-modules:  Common.Dump Common.World Common.Body Common.Util 
--                     Solver Solver.ListBH.Solver
--                            Solver.NestedBH.Solver
--                            Solver.VectorBH.Solver
--                            Solver.VectorNaive.Solver
--                     Timing Points2D.Types Points2D.Generate
--                     Batch.MainArgs Batch.Config
--     Build-depends:  base == 4.4.*, vector == 0.9.*, random == 1.0.*, old-time == 1.0.*, containers == 0.4.*, dph-base == 0.5.*, dph-prim-par == 0.5.*, dph-lifted-vseg == 0.5.*, HUnit == 1.2.*
--     hs-source-dirs: examples/real/NBody examples/real/NBody/Batch lib
--     ghc-options:    -rtsopts -threaded -fllvm -Odph -package dph-lifted-vseg -fcpr-off -fno-liberate-case -fno-spec-constr -fsimpl-tick-factor=1000

-- dph-real-nbody is broken due to vectorisation error
-- *** Vectorisation error ***
--     No exact 'PData' family instance for
--         Data.Array.Parallel.PArray.Types.Wrap
--           (Data.Array.Parallel.PArray.PData.Base.PArray
--              Solver.NestedBH.Solver.V:BHTree)

