Name:           dph-lifted-boxed
Version:        0.5.2.0
License:        BSD3
License-File:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@cse.unsw.edu.au>
Homepage:       http://www.haskell.org/haskellwiki/GHC/Data_Parallel_Haskell
Category:       Data Structures
Synopsis:       Sequential reference implementation of lifted DPH array primitives.

Cabal-Version:  >= 1.6
Build-Type:     Simple

Library
  -- This Cabal file is CPPed,
  --   then put in ../build/dph-lifted-copy-par and ../build/dph-lifted-copy-seq
  -- We therefore need to point back at the original location for where to find the sources
  HS-Source-Dirs: ../dph-lifted-boxed

  Exposed-Modules:
        Data.Array.Parallel.PArray

  Include-Dirs:
        include

  Extensions:
        CPP,
        BangPatterns,
        PatternGuards
        TypeFamilies,
        TypeOperators,
        RankNTypes,
        BangPatterns,
        MagicHash,
        UnboxedTuples,
        TypeOperators,
        FlexibleContexts,
        FlexibleInstances,
        EmptyDataDecls,
        NoMonomorphismRestriction,
        MultiParamTypeClasses,
        EmptyDataDecls,
        StandaloneDeriving,
        ExplicitForAll,
        ParallelListComp,
        PatternGuards,
        ExistentialQuantification,
        ScopedTypeVariables

  GHC-Options: 
        -Wall -fno-warn-orphans -fno-warn-missing-signatures
        -Odph 
        -funbox-strict-fields
        -fcpr-off
  
  Exposed:
        False

  Build-Depends:  
        base             == 4.4.*,
        ghc              == 7.*,
        array            == 0.3.*,
        pretty           == 1.1.*,
        vector           == 0.9.*,
        containers       == 0.4.*,
        dph-base         == 0.5.*,
        dph-prim-par     == 0.5.*

