Name:           dph-lifted-vseg-DPHWAY
Version:        0.5.2.0
License:        BSD3
License-File:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@cse.unsw.edu.au>
Homepage:       http://www.haskell.org/haskellwiki/GHC/Data_Parallel_Haskell
Category:       Data Structures
Synopsis:       Data structures for the Data Parallel Haskell vectoriser

Cabal-Version:  >= 1.6
Build-Type:     Simple

Library
  -- This Cabal file is CPPed,
  --   then put in ../build/dph-lifted-copy-par and ../build/dph-lifted-copy-seq
  -- We therefore need to point back at the original location for where to find the sources
  HS-Source-Dirs: ../dph-lifted-vseg

  Exposed-Modules:
        Data.Array.Parallel.Lifted.Closure
        Data.Array.Parallel.Lifted.Combinators
        Data.Array.Parallel.Lifted
        Data.Array.Parallel.PArray.PData.Base
        Data.Array.Parallel.PArray.PData.Double
        Data.Array.Parallel.PArray.PData.Int
        Data.Array.Parallel.PArray.PData.Nested
        Data.Array.Parallel.PArray.PData.Tuple
        Data.Array.Parallel.PArray.PData.Unit
        Data.Array.Parallel.PArray.PData.Wrap
        Data.Array.Parallel.PArray.PData
        Data.Array.Parallel.PArray.PRepr.Base
        Data.Array.Parallel.PArray.PRepr.Instances
        Data.Array.Parallel.PArray.PRepr.Nested
        Data.Array.Parallel.PArray.PRepr.Tuple
        Data.Array.Parallel.PArray.PRepr
        Data.Array.Parallel.PArray.Scalar
        Data.Array.Parallel.PArray.Sums
        Data.Array.Parallel.PArray.Types
        Data.Array.Parallel.PArray
        Data.Array.Parallel.Prelude.Double
        Data.Array.Parallel.Prelude.Int
        Data.Array.Parallel

  Include-Dirs:
        include

  Extensions:
        TypeFamilies, GADTs, RankNTypes, CPP,
        BangPatterns, MagicHash, UnboxedTuples, TypeOperators,
        PatternGuards,
        FlexibleContexts,
        FlexibleInstances
        

  GHC-Options: 
        -Wall -fno-warn-orphans -fno-warn-missing-signatures
        -Odph 
        -funbox-strict-fields
        -fcpr-off
  
  Build-Depends:  
        base             == 4.4.*,
        ghc              == 7.*,
        array            == 0.3.*,
        random           == 1.0.*,
        template-haskell == 2.6.*,
        pretty           == 1.1.*,
        vector           >= 0.7 && < 1.0,
        containers       == 0.4.*,
        dph-base         == 0.5.*,
        dph-prim-DPHWAY  == 0.5.*

  GHC-Options: -fdph-this

  GHC-Options: -package-name dph-lifted-vseg-DPHWAY

