Name:           dph-prim-par
Version:        0.4.0
License:        BSD3
License-File:   LICENSE
Author:         Manuel M T Chakravarty, Gabriele Keller, Roman Leshchinskiy
Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
Homepage:       http://www.cse.unsw.edu.au/~chak/project/dph/
Category:       Data Structures
Synopsis:       Parallel Primitives for Data-Parallel Haskell.

Cabal-Version:  >= 1.2.3
Build-Type:     Simple

Library
  Exposed-Modules:
        Data.Array.Parallel.Unlifted.Distributed
        Data.Array.Parallel.Unlifted.Parallel
        Data.Array.Parallel.Unlifted
  Other-Modules:
        Data.Array.Parallel.Unlifted.Distributed.Gang
        Data.Array.Parallel.Unlifted.Distributed.TheGang
        Data.Array.Parallel.Unlifted.Distributed.DistST
        Data.Array.Parallel.Unlifted.Distributed.Types
        Data.Array.Parallel.Unlifted.Distributed.Combinators
        Data.Array.Parallel.Unlifted.Distributed.Scalars
        Data.Array.Parallel.Unlifted.Distributed.Arrays
        Data.Array.Parallel.Unlifted.Distributed.Basics
        Data.Array.Parallel.Unlifted.Parallel.Combinators
        Data.Array.Parallel.Unlifted.Parallel.Sums
        Data.Array.Parallel.Unlifted.Parallel.Basics
        Data.Array.Parallel.Unlifted.Parallel.Permute
        Data.Array.Parallel.Unlifted.Parallel.Enum
        Data.Array.Parallel.Unlifted.Parallel.Segmented
        Data.Array.Parallel.Unlifted.Parallel.Subarrays

  Exposed: False

  Extensions: TypeFamilies, GADTs, RankNTypes,
              BangPatterns, MagicHash, UnboxedTuples, TypeOperators
  GHC-Options: -funbox-strict-fields -haddock -fcpr-off
  if impl(ghc >= 6.9)
    GHC-Options: -Odph
  else
    GHC-Options: -O2 -fdicts-cheap -fno-method-sharing

  Build-Depends:  base >= 3 && < 5, array, random
  if impl(ghc >= 6.9)
    Build-Depends: ghc-prim
  Build-Depends: dph-base, dph-prim-interface, dph-prim-seq

