Name:           dph-prim-seq
Version:        0.5.2.0
License:        BSD3
License-File:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@cse.unsw.edu.au>
Homepage:       http://www.haskell.org/haskellwiki/GHC/Data_Parallel_Haskell
Category:       Data Structures
Synopsis:       Sequential primitives for Data Parallel Haskell

Cabal-Version:  >= 1.6
Build-Type:     Simple

Library
  Exposed-Modules:
        Data.Array.Parallel.Unlifted.Sequential.USel
        Data.Array.Parallel.Unlifted.Sequential.USegd
        Data.Array.Parallel.Unlifted.Sequential.USSegd
        Data.Array.Parallel.Unlifted.Sequential.UVSegd
        Data.Array.Parallel.Unlifted.Sequential.Vector
        Data.Array.Parallel.Unlifted.Sequential.Vectors
        Data.Array.Parallel.Unlifted.Sequential.Streams
        Data.Array.Parallel.Unlifted.Sequential
        Data.Array.Parallel.Unlifted
        
  Other-Modules:
        Data.Array.Parallel.Unlifted.Sequential.Basics
        Data.Array.Parallel.Unlifted.Sequential.Combinators
        Data.Array.Parallel.Unlifted.Sequential.Sums
  

  Exposed: False

  Extensions: TypeFamilies, GADTs, RankNTypes,
              BangPatterns, MagicHash, UnboxedTuples, TypeOperators,
              NoMonomorphismRestriction
  GHC-Options:
        -dcore-lint
        -Odph
        -funbox-strict-fields -fcpr-off

  Build-Depends:  
        base      == 4.4.*,
        random    == 1.0.*,
        vector    == 0.9.*,
        primitive == 0.4.*,
        dph-base  == 0.5.*,
        dph-prim-interface == 0.5.*
